🔥 chore: arrange code

--- a/SwashbucklerDiary/Components/DialogComponents/DeleteDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/DeleteDialog.razor
@@ -13,7 +13,8 @@
         </MCardText>
         <MCardActions>
             <MSpacer></MSpacer>
-            <MButton Text="true" OnClick="HandleOnCancel">
+            <MButton Text="true"
+                     OnClick="HandleOnCancel">
                 @(I18n.T("Share.Cancel"))
             </MButton>
             <MButton Text="true"
