--- a/SwashbucklerDiary/Components/MyComponents/DiaryCard/DiaryCardList.razor
+++ b/SwashbucklerDiary/Components/MyComponents/DiaryCard/DiaryCardList.razor
@@ -41,5 +41,6 @@
               OnOK="()=>HandleDelete(SelectedDiary)">
 </DeleteDialog>
 
-<ExportDialog @bind-Value="ShowExport" Diaries="ExportDiaries">
+<ExportDialog @bind-Value="ShowExport"
+              Diaries="ExportDiaries">
 </ExportDialog>
