--- a/SwashbucklerDiary/Components/MyComponents/MyAppBar.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MyAppBar.razor
@@ -2,7 +2,8 @@
 
 <MAppBar App="true"
          Elevation="0">
-    <MButton Icon="true" OnClick="OnClick">
+    <MButton Icon="true"
+             OnClick="OnClick">
         <MIcon>
             mdi-arrow-left
         </MIcon>
