--- a/SwashbucklerDiary/Components/MyComponents/Swiper/SwiperTabItem.razor
+++ b/SwashbucklerDiary/Components/MyComponents/Swiper/SwiperTabItem.razor
@@ -1,7 +1,8 @@
 ﻿@namespace SwashbucklerDiary.Components
 
 <div class="swiper-slide">
-    <MContainer Fluid Class="my-container">
+    <MContainer Class="my-container"
+                Fluid="true">
         @ChildContent
     </MContainer>
 </div>
