--- a/SwashbucklerDiary/Pages/Mine/About/PrivacyPolicyPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/About/PrivacyPolicyPage.razor
@@ -2,7 +2,8 @@
 @namespace SwashbucklerDiary.Pages
 @inherits PageComponentBase
 
-<MyAppBar Title="@(I18n.T("About.Privacy"))" OnClick="NavigateToBack">
+<MyAppBar Title="@(I18n.T("About.Privacy"))"
+          OnClick="NavigateToBack">
 </MyAppBar>
 
 <ScrollContainer>
