--- a/SwashbucklerDiary/Pages/Mine/BackupsPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/BackupsPage.razor
@@ -4,7 +4,8 @@
 
 <MAppBar App="true"
          Elevation="0">
-    <MButton Icon OnClick="NavigateToBack">
+    <MButton Icon
+             OnClick="NavigateToBack">
         <MIcon>
             mdi-arrow-left
         </MIcon>
