--- a/SwashbucklerDiary/Pages/TagPage.razor
+++ b/SwashbucklerDiary/Pages/TagPage.razor
@@ -6,7 +6,8 @@
 </MyAppBar>
 
 <ScrollContainer>
-    <DiaryCardList Value="Diaries" @bind-Tags="Tags" />
+    <DiaryCardList @bind-Tags="Tags"
+                   Value="Diaries" />
 </ScrollContainer>
 
 <FabTransition>
