--- a/SwashbucklerDiary/Components/DialogComponents/DateFilterDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/DateFilterDialog.razor
@@ -1,26 +1,29 @@
 ﻿@namespace SwashbucklerDiary.Components
 @inherits DialogComponentBase
 
-<MultiSimpleDialog Value="Value" ValueChanged="InternalValueChanged">
+<MultiSimpleDialog Value="Value"
+                   ValueChanged="InternalValueChanged">
     <MCard Class="rounded-t-lg rounded-b-sm-lg">
         <MCardTitle Class="font-weight-bold">
             @(I18n.T("Filter.Filter"))
             <MSpacer></MSpacer>
-            <MButton Icon="true" OnClick="HandleOnCancel">
+            <MButton Icon="true"
+                     OnClick="HandleOnCancel">
                 <MIcon>mdi-close</MIcon>
             </MButton>
         </MCardTitle>
         <MCardText Class="pb-0">
             <div>
-                <MChipGroup @bind-Value="DefaultDate" Column="true">
+                <MChipGroup @bind-Value="DefaultDate"
+                            Column="true">
                     @foreach (var item in DefaultDates)
                     {
                         <MChip @key="item.Key"
-                           Value="item.Key"
-                           Outlined="true"
-                           Class="flex-grow-1 justify-center"
-                           Filter="true"
-                           OnClick="SelectDeafultDate">
+                               Value="item.Key"
+                               Outlined="true"
+                               Class="flex-grow-1 justify-center"
+                               Filter="true"
+                               OnClick="SelectDeafultDate">
                             @(I18n.T(item.Key))
                         </MChip>
                     }
@@ -35,7 +38,9 @@
                         @MinDateText
                     </MChip>
                     <div class="d-flex align-center">
-                        <MIcon Small>mdi-minus</MIcon>
+                        <MIcon Small>
+                            mdi-minus
+                        </MIcon>
                     </div>
                     <MChip Class="flex-grow-1 justify-center"
                            Outlined="true"
@@ -50,7 +55,8 @@
             <MultiDisplay>
                 <DesktopContent>
                     <MSpacer></MSpacer>
-                    <MButton Text="true" OnClick="HandleOnReset">
+                    <MButton Text="true"
+                             OnClick="HandleOnReset">
                         @(I18n.T("Share.Reset"))
                     </MButton>
                     <MButton Text="true"
@@ -81,9 +87,9 @@
 </MultiSimpleDialog>
 
 <MultiDatePicker @bind-Value="ShowMinDate"
-              @bind-Date="MinDate">
+@bind-Date="MinDate">
 </MultiDatePicker>
 
 <MultiDatePicker @bind-Value="ShowMaxDate"
-              @bind-Date="MaxDate">
+@bind-Date="MaxDate">
 </MultiDatePicker>
