--- a/SwashbucklerDiary/Pages/Mine/AchievementPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/AchievementPage.razor
@@ -2,15 +2,17 @@
 @namespace SwashbucklerDiary.Pages
 @inherits PageComponentBase
 
-<MAppBar App="true" Elevation="0">
-    <MButton Icon="true" OnClick="NavigateToBack">
+<MAppBar App="true"
+         Elevation="0">
+    <MButton Icon="true"
+             OnClick="NavigateToBack">
         <MIcon>
             mdi-arrow-left
         </MIcon>
     </MButton>
 
     <MySearch @bind-Value="ShowSearch"
-              @bind-Search="Search"
+    @bind-Search="Search"
               Title="@(I18n.T("Mine.Achievement"))"
               OnChanged="UpdateAchievements">
     </MySearch>
@@ -34,7 +36,8 @@
                 <MList>
                     <MListItem>
                         <MListItemAvatar>
-                            <MIcon XLarge Color="@GetIconColor(item)">
+                            <MIcon XLarge
+                                   Color="@GetIconColor(item)">
                                 @(AchievementPage.GetIcon(item))
                             </MIcon>
                         </MListItemAvatar>
@@ -49,8 +52,8 @@
                             </MListItemSubtitle>
 
                             <MProgressLinear Value="AchievementPage.GetProgressRate(item)"
-                                             Color="@(GetProgressRateColor(item))"
                                              Class="rounded-pill"
+                                             Color="@(GetProgressRateColor(item))"
                                              Height="20">
                                 <strong class="@GetProgressRateTextColor(item)">
                                     @(GetProgressRateText(item))
