--- a/SwashbucklerDiary/Pages/Mine/Settings/PermissionPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/Settings/PermissionPage.razor
@@ -2,7 +2,8 @@
 @namespace SwashbucklerDiary.Pages
 @inherits PageComponentBase
 
-<MyAppBar Title="@(I18n.T("Setting.Safe.Permission"))" OnClick="NavigateToBack">
+<MyAppBar Title="@(I18n.T("Setting.Safe.Permission"))"
+          OnClick="NavigateToBack">
 </MyAppBar>
 
 <ScrollContainer>
