--- a/SwashbucklerDiary/Pages/ReadPage.razor
+++ b/SwashbucklerDiary/Pages/ReadPage.razor
@@ -1,8 +1,10 @@
 ﻿@page "/read/{id:guid}"
 @inherits PageComponentBase
 
-<MAppBar App="true" Elevation="0">
-    <MButton Icon="true" OnClick="NavigateToBack">
+<MAppBar App="true"
+         Elevation="0">
+    <MButton Icon="true"
+             OnClick="NavigateToBack">
         <MIcon>
             mdi-arrow-left
         </MIcon>
@@ -28,7 +30,8 @@
         </MIcon>
     </MButton>
 
-    <MultiMenu @bind-Value="ShowMenu" ListItemModels="ListItemModels">
+    <MultiMenu @bind-Value="ShowMenu"
+               ListItemModels="ListItemModels">
         <ButtonContent>
             <MultiDisplay>
                 <DesktopContent>
@@ -59,9 +62,10 @@
         <div class="px-2">
             @if (ShowWeather)
             {
-                <MChip Class="my-2 mr-2" Outlined="true">
-                <MIcon Left="true">
-                    @(GetWeatherIcon(Diary.Weather))
+                <MChip Class="my-2 mr-2"
+                       Outlined="true">
+                    <MIcon Left="true">
+                        @(GetWeatherIcon(Diary.Weather))
                     </MIcon>
                     @(I18n.T("Weather." + Diary.Weather))
                 </MChip>
@@ -69,9 +73,10 @@
 
             @if (ShowMood)
             {
-                <MChip Class="my-2 mr-2" Outlined="true">
-                <MIcon Left="true">
-                    @(GetMoodIcon(Diary.Mood))
+                <MChip Class="my-2 mr-2"
+                       Outlined="true">
+                    <MIcon Left="true">
+                        @(GetMoodIcon(Diary.Mood))
                     </MIcon>
                     @(I18n.T("Mood." + Diary.Mood))
                 </MChip>
@@ -79,11 +84,12 @@
 
             @if (ShowLocation)
             {
-                <MChip Class="my-2 mr-2" Outlined="true">
-                <MIcon Left="true">
-                    mdi-map-marker-outline
-                </MIcon>
-                @(Diary.Location)
+                <MChip Class="my-2 mr-2"
+                       Outlined="true">
+                    <MIcon Left="true">
+                        mdi-map-marker-outline
+                    </MIcon>
+                    @(Diary.Location)
                 </MChip>
             }
         </div>
@@ -91,34 +97,34 @@
         @if (ShowTitle)
         {
             <MTextField Value="@(Diary.Title)"
-                    Class="pb-0 my-sm-4 user-select font-weight-bold"
-                    Solo="true"
-                    Flat="true"
-                    TValue="string"
-                    HideDetails="@("auto")"
-                    Dense="true"
-                    Readonly="true"
+                        Class="pb-0 my-sm-4 user-select font-weight-bold"
+                        Solo="true"
+                        Flat="true"
+                        TValue="string"
+                        HideDetails="@("auto")"
+                        Dense="true"
+                        Readonly="true"
                         maxlength="20">
             </MTextField>
         }
         @if (Markdown)
         {
             <MarkdownPreview Value="@(Diary.Content)"
-                         Class="my-sm-4 px-3 user-select"
-                         Style="padding-top:10px">
+                             Class="my-sm-4 px-3 user-select"
+                             Style="padding-top:10px">
             </MarkdownPreview>
         }
         else
         {
             <MTextarea Value="@(Diary.Content)"
-                   Class="my-sm-4 user-select"
-                   Solo="true"
-                   Flat="true"
-                   HideDetails="@("auto")"
-                   Readonly="true"
-                   AutoGrow="true"
-                   Rows="8"
-                   RowHeight="30">
+                       Class="my-sm-4 user-select"
+                       Solo="true"
+                       Flat="true"
+                       HideDetails="@("auto")"
+                       Readonly="true"
+                       AutoGrow="true"
+                       Rows="8"
+                       RowHeight="30">
             </MTextarea>
         }
 
@@ -135,11 +141,14 @@
     </div>
 </ScrollContainer>
 
-<ShareDialog @bind-Value="ShowShare" Items="ShareItems">
+<ShareDialog @bind-Value="ShowShare"
+             Items="ShareItems">
 </ShareDialog>
 
-<MOverlay Value="showLoading" ZIndex="99">
-    <MProgressCircular Indeterminate="true" Size="48">
+<MOverlay Value="showLoading"
+          ZIndex="99">
+    <MProgressCircular Indeterminate="true"
+                       Size="48">
     </MProgressCircular>
 </MOverlay>
 
@@ -149,5 +158,6 @@
               OnOK="HandleDelete">
 </DeleteDialog>
 
-<ExportDialog @bind-Value="ShowExport" Diaries="ExportDiaries">
+<ExportDialog @bind-Value="ShowExport"
+              Diaries="ExportDiaries">
 </ExportDialog>
