--- a/SwashbucklerDiary/Pages/WritePage.razor
+++ b/SwashbucklerDiary/Pages/WritePage.razor
@@ -4,7 +4,8 @@
 <MAppBar App="true"
          Elevation="0">
     <ChildContent>
-        <MButton Icon="true" OnClick="NavigateToBack">
+        <MButton Icon="true"
+                 OnClick="NavigateToBack">
             <MIcon>
                 mdi-arrow-left
             </MIcon>
@@ -19,7 +20,8 @@
             </MIcon>
         </MButton>
 
-        <MultiMenu @bind-Value="ShowMenu" ListItemModels="ListItemModels">
+        <MultiMenu @bind-Value="ShowMenu"
+                   ListItemModels="ListItemModels">
             <ButtonContent>
                 <MultiDisplay>
                     <DesktopContent>
