🔥 chore: arrange code

--- a/SwashbucklerDiary/Pages/Mine/Backups/LocalBackups.razor
+++ b/SwashbucklerDiary/Pages/Mine/Backups/LocalBackups.razor
@@ -1,4 +1,4 @@
-﻿@namespace SwashbucklerDiary.Components
+﻿@namespace SwashbucklerDiary.Pages
 @inherits BackupsPageComponentBase
 
 <MCard Elevation="0"
