--- a/SwashbucklerDiary/Pages/Mine/BackupsPage.razor
+++ b/SwashbucklerDiary/Pages/Mine/BackupsPage.razor
@@ -27,10 +27,10 @@
 
 <SwiperTabItems @bind-Value="tabs">
     <SwiperTabItem>
-        <BackupsLocal></BackupsLocal>
+        <LocalBackups></LocalBackups>
     </SwiperTabItem>
     <SwiperTabItem>
-        <BackupsWebDAV></BackupsWebDAV>
+        <WebDAVBackups></WebDAVBackups>
     </SwiperTabItem>
 </SwiperTabItems>
 
