--- a/SwashbucklerDiary/Pages/Mine/Backups/WebDAVBackups.razor
+++ b/SwashbucklerDiary/Pages/Mine/Backups/WebDAVBackups.razor
@@ -1,4 +1,4 @@
-﻿@namespace SwashbucklerDiary.Components
+﻿@namespace SwashbucklerDiary.Pages
 @inherits BackupsPageComponentBase
 
 <MCard Elevation="0"
